--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "helmet": "^3.19.0",
-    "nodemon": "^1.19.1"
+    "mongoose": "^5.6.5",
+    "nodemon": "^1.19.1",
+    "passport-local": "^1.0.0"
   }
 }
