--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "dotenv": "^8.0.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "helmet": "^3.19.0",
     "mongoose": "^5.6.5",
     "nodemon": "^1.19.1",
+    "passport": "^0.4.0",
     "passport-local": "^1.0.0"
   }
 }
