--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "eternity-hash",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "App.js",
   "scripts": {
-    "start": "nodemon server.js"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "test": "react-scripts test",
+    "start": "nodemon server.js",
+    "react": "react-scripts start",
+    "build": "react-scripts build",
+    "eject": "react-scripts eject"
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,9 @@
     "nodemon": "^1.19.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-scripts": "^3.0.1"
   },
   "browserslist": {
     "production": [
