--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-session": "^1.16.2",
     "helmet": "^3.19.0",
     "mongoose": "^5.6.5",
+    "multer": "^1.4.2",
     "nodemon": "^1.19.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
