--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "multer": "^1.4.2",
     "nodemon": "^1.19.1",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "react-stripe-elements": "^4.0.1"
   },
   "browserslist": {
     "production": [
