--- a/package.json
+++ b/package.json
@@ -22,14 +22,18 @@
   "homepage": "https://github.com/brrf/eternity-hash#readme",
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "bigi": "^1.4.2",
+    "bitcoinjs-lib": "^5.1.6",
     "body-parser": "^1.19.0",
+    "buffer": "^5.4.3",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
-    "helmet": "^3.19.0",
+    "helmet": "^3.21.1",
+    "keys": "^0.1.2",
     "mongoose": "^5.6.5",
     "multer": "^1.4.2",
     "nodemon": "^1.19.1",
