--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,8 @@
     "@fortawesome/free-solid-svg-icons": "^5.10.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.14",
+    "react-bootstrap-timezone-picker": "^2.0.0",
     "react-datepicker": "^2.8.0",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
@@ -25,6 +27,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.0.1",
     "react-stripe-elements": "^4.0.1",
+    "react-timezone": "^2.4.0",
     "redux": "^4.0.4"
   },
   "browserslist": {
