--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "keys": "^0.1.2",
     "mongoose": "^5.6.5",
     "multer": "^1.4.2",
+    "node-fetch": "^2.6.0",
     "nodemon": "^1.19.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
