--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "nodemon": "^1.19.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "shippo": "^1.3.1",
     "stripe": "^7.8.0"
   },
   "browserslist": {
