--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,7 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.0.1",
+    "react-select-us-states": "^0.1.2",
     "react-stripe-elements": "^4.0.1",
     "react-timezone": "^2.4.0",
     "redux": "^4.0.4"
